--- a/Dockerfile-backend
+++ b/Dockerfile-backend
@@ -10,6 +10,6 @@ COPY . /usr/src/app
 RUN npm install -g nodemon knex
 RUN npm install
 RUN apt-get update \
-  && apt-get install netcat net-tools
+  && apt-get install -y netcat net-tools
 
 CMD ["nodemon", "server"]
