--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "version": "1.0.0-14",
   "engines": {
-    "node": "0.10.x",
+    "node": "^12.0.0",
     "npm": ">= 1.0.0"
   },
   "dependencies": {
@@ -40,7 +40,7 @@
     "envify": "^2.0.1",
     "event-stream": "^3.1.7",
     "exorcist": "^0.1.6",
-    "gulp": "^3.8.6",
+    "gulp": "^4.0.0",
     "gulp-autoprefixer": "0.0.8",
     "gulp-buffer": "0.0.2",
     "gulp-csso": "^0.2.9",
@@ -54,7 +54,7 @@
     "request": "^2.40.0",
     "slug": "^0.5.0",
     "stream-combiner": "^0.2.1",
-    "vinyl-source-stream": "^0.1.1",
+    "vinyl-source-stream": "^2.0.0",
     "watchify": "^1.0.1"
   }
 }
