--- a/Dockerfile-backend
+++ b/Dockerfile-backend
@@ -1,11 +1,11 @@
-FROM node
+FROM node:12
 
 RUN mkdir /usr/src/app
 RUN chmod -R 777 /usr/src/app
 
-WORKDIR /usr/src/app
-
 COPY . /usr/src/app
+
+WORKDIR /usr/src/app
 
 RUN npm install -g nodemon knex
 RUN npm install
