--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "debounce": "^1.2.0",
     "emailjs": "2.2.0",
     "express": "^4.17.1",
-    "jade": "^1.11.0",
     "knex": "^0.19.1",
     "moment": "2.24.0",
     "mysql": "^2.17.1",
@@ -36,10 +35,12 @@
   "devDependencies": {
     "async": "^3.1.0",
     "browserify": "^16.3.0",
+    "css-loader": "^3.2.0",
     "del": "^5.0.0",
     "envify": "^4.1.0",
     "event-stream": "^4.0.1",
     "exorcist": "^1.0.1",
+    "file-loader": "^4.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "6.1.0",
     "gulp-buffer": "0.0.2",
@@ -49,12 +50,21 @@
     "gulp-rename": "^1.4.0",
     "gulp-rev": "^9.0.0",
     "gulp-util": "^3.0.8",
+    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-pug-plugin": "^2.0.0",
+    "jade": "^1.11.0",
+    "jade-html-loader": "0.0.3",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-google-text-to-speech": "^0.1.0",
+    "pug-html-loader": "^1.1.5",
     "reactify": "^1.1.1",
     "request": "^2.88.0",
     "slug": "^1.1.0",
     "stream-combiner": "^0.2.2",
     "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.1"
+    "watchify": "^3.11.1",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6"
   }
 }
