--- a/Dockerfile-webpack
+++ b/Dockerfile-webpack
@@ -1,7 +1,13 @@
 FROM node
 
+RUN mkdir /usr/src/app
+RUN chmod -R 777 /usr/src/app
+
+COPY . /usr/src/app
+
 WORKDIR /usr/src/app
 
+RUN npm install
 RUN npm install -g webpack webpack-cli
 
-CMD ["wepack"]
+CMD ["webpack"]
