--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "ballgame",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "webpack"
   },
   "version": "1.0.0-14",
   "engines": {
@@ -16,6 +17,7 @@
     "bookshelf": "^0.15.1",
     "browsernizr": "^2.3.0",
     "chalk": "^2.4.2",
+    "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "debounce": "^1.2.0",
     "emailjs": "2.2.0",
@@ -23,8 +25,11 @@
     "knex": "^0.19.1",
     "moment": "2.24.0",
     "mysql": "^2.17.1",
+    "preact": "^8.5.0",
+    "preact-css-transition-group": "^1.3.0",
     "python-shell": "^1.0.7",
     "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "serve-static": "^1.14.1",
     "socket.io": "^2.2.0",
     "sparknode": "^0.4.9",
@@ -33,7 +38,12 @@
     "underscore": "1.9.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
     "async": "^3.1.0",
+    "babel-loader": "^8.0.6",
     "browserify": "^16.3.0",
     "css-loader": "^3.2.0",
     "del": "^5.0.0",
@@ -50,10 +60,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-rev": "^9.0.0",
     "gulp-util": "^3.0.8",
-    "html-webpack-plugin": "^3.2.0",
-    "html-webpack-pug-plugin": "^2.0.0",
     "jade": "^1.11.0",
-    "jade-html-loader": "0.0.3",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-google-text-to-speech": "^0.1.0",
@@ -62,6 +69,7 @@
     "request": "^2.88.0",
     "slug": "^1.1.0",
     "stream-combiner": "^0.2.2",
+    "style-loader": "^1.0.0",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1",
     "webpack": "^4.39.1",
