--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "preact-css-transition-group": "^1.3.0",
     "python-shell": "^1.0.7",
     "react": "^16.8.6",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.8.6",
     "serve-static": "^1.14.1",
     "socket.io": "^2.2.0",
