--- a/Dockerfile-backend
+++ b/Dockerfile-backend
@@ -10,6 +10,8 @@ WORKDIR /usr/src/app
 RUN npm install -g nodemon knex
 RUN npm install
 RUN apt-get update \
-  && apt-get install -y netcat net-tools
+  && apt-get install -y netcat net-tools python-pip
+
+RUN pip install trueskill sqlalchemy mysql-python
 
 CMD ["nodemon", "server"]
