--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,5 @@ ui/public/sounds/
 ui/public/img/
 versions/
 config.js
-trueSkill.py.plista
-trueSkill/trueSkill.py
+pyTrueSkill/pyTrueSkill.py
 mysql/
