--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,8 +63,21 @@ services:
         environment:
             NODE_ENV: ${NODE_ENV}
         volumes:
-            - ./ui/:/usr/src/app/ui/
-            - ./webpack.config.js:/usr/src/app/webpack.config.js
+            #- ./ui/:/usr/src/app/ui/
+            #- ./webpack.config.js:/usr/src/app/webpack.config.js
+            - .:/usr/src/app/
         command: npm run build
         ports:
             - 9000:9000
+
+    bg-sync:
+        image: cweagans/bg-sync
+        volumes:
+            - .:/source
+        volumes_from:
+            - webpack
+        environment:
+            - SYNC_DESTINATION=/usr/src/app/
+            - SYNC_MAX_INOTIFY_WATCHES=40000
+            - SYNC_VERBOSE=1
+        privileged: true
