--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# Use root/example as user/password credentials
 version: '3.1'
 
 services:
@@ -34,6 +33,18 @@ services:
           - "2000:2000"
         depends_on:
           - db
+
+    soundloader:
+        image: node
+        restart: always
+        environment:
+            NODE_ENV: ${NODE_ENV}
+        volumes:
+            - .:/usr/src/app/
+        depends_on:
+            - db
+        working_dir: /usr/src/app/
+        command: node watchPlayers.js
 
     migrations:
         build:
