add config.js to .dockerignore and volume-mount it instead

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,5 +5,6 @@ ui/public/build/
 ui/public/sounds/
 ui/public/img/
 versions/
-trueSkill/trueSkill.py
+pytrueSkill/pytrueSkill.py
 mysql/
+config.js
