adding python dep tenacity

--- a/Dockerfile-backend
+++ b/Dockerfile-backend
@@ -12,6 +12,6 @@ RUN npm install
 RUN apt-get update \
   && apt-get install -y netcat net-tools python-pip vim
 
-RUN pip install trueskill sqlalchemy mysql-python
+RUN pip install trueskill sqlalchemy mysql-python tenacity
 
 CMD ["nodemon", "server"]
